--- a/views/instituciones.ejs
+++ b/views/instituciones.ejs
@@ -72,7 +72,7 @@
                         </a>
                     </li>
                     <li class="active-pro">
-                        <a href="#">
+                        <a href="/legal">
                             <i class="material-icons">info</i>
                             <p>Aviso legal</p>
                         </a>
