--- a/views/lideres.ejs
+++ b/views/lideres.ejs
@@ -73,7 +73,7 @@
                         </a>
                     </li>
                     <li class="active-pro">
-                        <a href="#">
+                        <a href="/legal">
                             <i class="material-icons">info</i>
                             <p>Aviso legal</p>
                         </a>
@@ -118,7 +118,7 @@
                                 <% }) %>
                                 <% } %>
                                 <!--
-                                <li class="divider"></li>
+                                <li class="divider"></li>                                                                                   
                                 <li><a href="#">Separated link</a></li>
                                 <li class="divider"></li>
                                 <li><a href="#">One more separated link</a></li>
@@ -150,7 +150,8 @@
                         <% } %>
                     </div>
                     <div id="stats-display" class="row">
-                        <div class="col-md-3">
+                        <div class="col-md-1"></div>
+                        <div class="col-md-4">
                             <% if  (hasPage) { %>
                                 <div class="card card-stats">
                                     <div class="card-header" data-background-color="blue">
@@ -176,8 +177,8 @@
                                 <!--<h2 id="count-likes"></h2><h4></h4>-->
                             <% } %>
                         </div>
-                        <div class="col-md-1"></div>
-                        <div class="col-md-3">
+                        <div class="col-md-2"></div>
+                        <div class="col-md-4">
                             <% if  (hasPage) { %>
                                 <div class="card card-stats">
                                     <div class="card-header" data-background-color="red">
@@ -221,6 +222,7 @@
                             <% } %>
                         </div>
                         <div class="col-md-1"></div>
+                        <!--
                         <div class="col-md-3">
                             <% if  (hasPage) { %>
                                 <div class="card card-stats">
@@ -229,7 +231,6 @@
                                     </div>
                                     <div class="card-content">
                                         <p class="category">Cantidad de comentarios que mencionan a esta persona en noticias de corrupción</p>
-                                        <!--<h3 class="title">49/50<small>GB</small></h3>-->
                                         <h2 id="comment-corruption-count">0</h2>
                                     </div> 
                                 </div>
@@ -240,7 +241,6 @@
                                     </div>
                                     <div class="card-content">
                                         <p class="category">Cantidad de comentarios que mencionan a esta persona en noticias de corrupción</p>
-                                        <!--<h3 class="title">49/50<small>GB</small></h3>-->
                                         <h2 id="comment-corruption-count"></h2>
                                     </div> 
                                     <div class="card-footer">
@@ -251,7 +251,7 @@
                                     </div>
                                 </div>
                             <% } %>
-                        </div>
+                        </div>-->
                     </div>
                     <% if  (hasPage) { %>
                     <div id="row-reactions" class="row">
