--- a/views/legal.ejs
+++ b/views/legal.ejs
@@ -54,7 +54,7 @@
                             <p>Instituciones</p>
                         </a>
                     </li>
-                    <li class="active">
+                    <li>
                         <a href="/casos">
                             <i class="material-icons">gavel</i>
                             <p>Casos de corrupción</p>
@@ -72,7 +72,7 @@
                             <p>Descubre</p>
                         </a>
                     </li>
-                    <li class="active-pro">
+                    <li class="active-pro active">
                         <a href="/legal">
                             <i class="material-icons">info</i>
                             <p>Aviso legal</p>
@@ -96,76 +96,19 @@
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-right">
-                        <!--
-                            <li>
-                                <a href="#pablo" class="dropdown-toggle" data-toggle="dropdown">
-                                    <i class="material-icons">dashboard</i>
-                                    <p class="hidden-lg hidden-md">Dashboard</p>
-                                </a>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    <i class="material-icons">notifications</i>
-                                    <span class="notification">5</span>
-                                    <p class="hidden-lg hidden-md">Notifications</p>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li>
-                                        <a href="#">Mike John responded to your email</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">You have 5 new tasks</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">You're now friend with Andrew</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Another Notification</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Another One</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#pablo" class="dropdown-toggle" data-toggle="dropdown">
-                                    <i class="material-icons">person</i>
-                                    <p class="hidden-lg hidden-md">Profile</p>
-                                </a>
-                            </li>
-                        -->
                         </ul>
                     </div>
                 </div>
             </nav>
             <div class="content">
                 <div class="container-fluid">
+                    <h3>Aviso legal</h3>
                     <div class="row">
-                        <div class="col-md-3 dropdown">
-                            <a id="dropdown-title" href="#" class="btn dropdown-toggle" data-toggle="dropdown">
-                                <!-- TODO: reemplazar por el primero en orden alfabetico (con ejs) -->
-                                Odebrecht
-                                <b class="caret"></b>
-                            </a>
-                            <ul id="casos" class="dropdown-menu">
-                                <% if (casos.length > 0) { %>
-                                <% casos[0].casos.forEach(function (caso) { %>
-                                    <li><a id="<%= caso.short_name %>" href="#"><%= caso.friendly_name %></a></li>
-                                <% }) %>
-                                <% } %>
-                            </ul>
+                        <div class="col-md-12">
+                            <p>El presente software no permite identificar a personas o entidades corruptas. La información que se presenta en la página no ha sido modificada de ninguna manera para reflejar la opinión personal de los creadores del software. Bajo ninguna circunstancia los creadores del software son responsables por conclusiones o acusaciones derivadas a partir de este trabajo.</p>
+                            <hr>
+                            <p>ESTE SOFTWARE SE PROPORCIONA "TAL CUAL" Y SE RENUNCIA A CUALQUIER GARANTÍA EXPRESA O IMPLÍCITA, INCLUYENDO, PERO NO LIMITADO A, LAS GARANTÍAS IMPLÍCITAS DE COMERCIABILIDAD E IDONEIDAD PARA UN PROPÓSITO EN PARTICULAR. EN NINGÚN CASO LOS REGENTES O COLABORADORES SERÁN RESPONSABLES DE DAÑOS DIRECTOS, INDIRECTOS, INCIDENTALES, ESPECIALES, EJEMPLARES O RESULTANTES (INCLUIDOS, ENTRE OTROS, LA ADQUISICIÓN DE BIENES O SERVICIOS SUSTITUTOS, LA PÉRDIDA DE USO, LOS DATOS O LAS GANANCIAS; O INTERRUPCIÓN DE NEGOCIOS) DE CUALQUIER MANERA Y EN CUALQUIER TEORÍA DE RESPONSABILIDAD, YA SEA EN CONTRATO, RESPONSABILIDAD ESTRICTA O AGRAVIO (INCLUIDA LA NEGLIGENCIA O DE OTRO MODO) QUE SURJA DE CUALQUIER MODO DEL USO DE ESTE SOFTWARE, AUN SI SE ACONSEJA LA POSIBILIDAD DE DICHO DAÑO.</p>
                         </div>
-
-                    </div>
-                    <div class="row">
-                        <%- include('graphs/actividad', {
-
-                        }) %>
-                    </div>
-                    <div class="row">
-                        <%- include('graphs/reactions', {
-
-                        }) %>
                     </div>
                 </div>
             </div>
@@ -213,17 +156,4 @@
         demo.initDashboardPageCharts();
     });
 </script>
-<%- include('scripts/actividad', {
-    casos: casos,
-    entity: "casos",
-    displayDefault: "odebrecht"
-}) %>
-<%- include('scripts/reactions', {
-    casos: casos,
-    entity: "casos",
-    displayDefault: "odebrecht"
-}) %>
-<%- include('scripts/dropdown', {
-    casos: casos
-}) %>
 </html>
