--- a/views/mediostodo.ejs
+++ b/views/mediostodo.ejs
@@ -80,7 +80,7 @@
                         </a>
                     </li>
                     <li class="active-pro">
-                        <a href="#">
+                        <a href="legal">
                             <i class="material-icons">info</i>
                             <p>Aviso legal</p>
                         </a>
