--- a/views/partidos.ejs
+++ b/views/partidos.ejs
@@ -73,7 +73,7 @@
                         </a>
                     </li>
                     <li class="active-pro">
-                        <a href="#">
+                        <a href="legal">
                             <i class="material-icons">info</i>
                             <p>Aviso legal</p>
                         </a>
